# Sentinel-D1

./: .gitignore  README.md  pyproject.toml
sentinel_d1/: cli.py  downloader.py  manager.py  service.py
